* gensupport.c (collect_insn_data): Record the maximum number         of alternatives, not the last seen.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34206 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-27  Richard Henderson  <rth@cygnus.com>
 
+	* gensupport.c (collect_insn_data): Record the maximum number
+	of alternatives, not the last seen.
+
 	* genoutput.c: Don't include errors.h.
 	(struct data): Add lineno member.
 	(have_error): New.
