* combine.c (subst): Honour CLASS_CANNOT_CHANGE_SIZE when substituting the REG in a (subreg:X (reg:Y ...)).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34217 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-27  Geoff Keating  <geoffk@cygnus.com>
+
+	* combine.c (subst): Honour CLASS_CANNOT_CHANGE_SIZE when
+	substituting the REG in a (subreg:X (reg:Y ...)).
+
 2000-05-28  Neil Booth  <NeilB@earthling.net>
 
 	* cpplex.c (_cpp_lex_line): Merge vertical space.  Flag
