--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-05-27  Richard Henderson  <rth@cygnus.com>
 
+	* config/alpha/elf.h (SELECT_SECTION): Mirror Kenner's May 19
+	change to config/elfos.h.
+
+2000-05-27  Richard Henderson  <rth@cygnus.com>
+
 	* Makefile.in (resource.o): Depend on except.h.
 	* except.h (output_exception_table_data): Prototype.
 	* genconfig.c (gen_peephole2): Prototype.
