--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-27  Richard Henderson  <rth@cygnus.com>
 
+	* config/rs6000/rs6000.md (untyped_call): Use GEN_CALL.
+
+2000-05-27  Richard Henderson  <rth@cygnus.com>
+
 	* config/alpha/alpha.c (alpha_does_function_need_gp): Test
 	TARGET_PROFILING_NEEDS_GP in the if, instead of with an ifdef.
 	(alpha_expand_prologue): Emit prologue_mcount if needed.
