* function.c (diddle_return_value): A pcc-style struct return         returns a pointer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34230 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-28  Richard Henderson  <rth@cygnus.com>
+
+	* function.c (diddle_return_value): A pcc-style struct return
+	returns a pointer.
+
 2000-05-27  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cppfiles.c: Read files in, using mmap if possible, then
