* operators.def (<?): Duplicated, should have been... (>?): this.  Fixed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34232 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-28  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* operators.def (<?): Duplicated, should have been...
+	(>?): this.  Fixed.
+
 2000-05-27  Alex Samuel    <samuel@codesourcery.com>
 	    Mark Mitchell  <mark@codesourcery.com>
 
