* g++.old-deja/g++.law/refs4.C: Mark as XFAIL. * g++.old-deja/g++.law/temps4.C: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34235 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,11 @@
 2000-05-28  Alexandre Oliva  <aoliva@cygnus.com>
 
+	* g++.old-deja/g++.law/refs4.C: Mark as XFAIL.
+	* g++.old-deja/g++.law/temps4.C: Likewise.
+
+
+2000-05-28  Alexandre Oliva  <aoliva@cygnus.com>
+
 	* g++.old-deja/g++.brendan/code-gen4.C: Include stdio.h and
 	stdlib.h.  Call abort() on failure.
 	* g++.old-deja/g++.law/refs4.C: Likewise.
