--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-28  Richard Henderson  <rth@cygnus.com>
 
+	* loop.c (instrument_loop_bct): Set JUMP_LABEL on the new insn.
+
+2000-05-28  Richard Henderson  <rth@cygnus.com>
+
 	* function.c (diddle_return_value): A pcc-style struct return
 	returns a pointer.
 
