* regclass.c (record_operand_costs): Protect reg_changes_size         with CLASS_CANNOT_CHANGE_SIZE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34238 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-28  Richard Henderson  <rth@cygnus.com>
 
+	* regclass.c (record_operand_costs): Protect reg_changes_size
+	with CLASS_CANNOT_CHANGE_SIZE.
+
 	* loop.c (instrument_loop_bct): Set JUMP_LABEL on the new insn.
 
 2000-05-28  Richard Henderson  <rth@cygnus.com>
