Docuement that CONSITIONAL_REGISTER_USAGE can modify reg_names.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34239 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-28  Nick Clifton  <nickc@cygnus.com>
+
+	* tm.texi (CONDITIONAL_REGISTER_USAGE): Document that it can
+	modify reg_names.
+
 2000-05-28  Richard Henderson  <rth@cygnus.com>
 
 	* regclass.c (record_operand_costs): Protect reg_changes_size
