--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-28  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* decl2.c (lang_decode_option): Use skip_leading_substring instead
+	of plain strncmp.
+
 2000-05-28  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* operators.def (<?): Duplicated, should have been...
