--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-28  Alexandre Oliva  <aoliva@cygnus.com>
 
+	* gcc.c-torture/execute/20000528-1.c: New test.
+
 	* g++.old-deja/g++.law/refs4.C: Mark as XFAIL.
 	* g++.old-deja/g++.law/temps4.C: Likewise.
 
