* lcm.c (make_preds_opaque): Fix comment. 	(optimize_mode_switching): Use NORMAL_MODE instead of 	MODE_USES_IN_EXIT_BLOCK.  Change leftover instance of 	FP_MODE_NONE to no_mode.  Rename MODE_AT_ENTRY to NORMAL_MODE. 	Handle insertions before an existing NOTE_INSN_BASIC_BLOCK. 	* tm.texi (OPTIMIZE_MODE_SWITCHING): Refer to NORMAL_MODE. 	(MODE_USES_IN_EXIT_BLOCK): Delete. 	(MODE_AT_ENTRY) Rename to NORMAL_MODE. 	* sh.h (MODE_USES_IN_EXIT_BLOCK): Delete. 	(MODE_AT_ENTRY): Rename to NORMAL_MODE. 	(MODE_NEEDED): Don't look for USE. 	(EPILOGUE_USES): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34243 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/tm.texi
+++ b/gcc/tm.texi
@@ -7275,7 +7275,7 @@ return non-zero for any @var{entity} that that needs mode-switching.
 If you define this macro, you also have to define
 @code{NUM_MODES_FOR_MODE_SWITCHING}, @code{MODE_NEEDED},
 @code{MODE_PRIORITY_TO_MODE} and @code{EMIT_MODE_SET}.
-@code{MODE_AT_ENTRY} and @code{MODE_USES_IN_EXIT_BLOCK} are optional.
+@code{NORMAL_MODE} is optional.
 
 @findex NUM_MODES_FOR_MODE_SWITCHING
 @item NUM_MODES_FOR_MODE_SWITCHING
@@ -7290,15 +7290,6 @@ In macros that take mode arguments / yield a mode result, modes are
 represented as numbers 0 .. N - 1.  N is used to specify that no mode
 switch is needed / supplied.
 
-@findex MODE_USES_IN_EXIT_BLOCK
-@item MODE_USES_IN_EXIT_BLOCK
-If this macro is defined, it is called for each exit block when mode switching
-optimization is performed.  Its return value should be the pattern of an insn,
-or a sequence of insns.  It is emitted before the return insn / use insns at
-the end of the exit block.
-
-This is done before insns are examined for their need of any mode switching.
-
 @findex MODE_NEEDED
 @item MODE_NEEDED (@var{entity}, @var{insn})
 @var{entity} is an integer specifying a mode-switched entity.  If
@@ -7307,11 +7298,11 @@ return an integer value not larger than the corresponding element in
 NUM_MODES_FOR_MODE_SWITCHING, to denote the mode that @var{entity} must
 be switched into prior to the execution of INSN.
 
-@findex MODE_AT_ENTRY
-@item MODE_AT_ENTRY (@var{entity})
+@findex NORMAL_MODE 
+@item NORMAL_MODE (@var{entity})
 If this macro is defined, it is evaluated for every @var{entity} that needs
 mode switching.  It should evaluate to an integer, which is a mode that
-@var{entity} is assumed to be switched to at function entry.
+@var{entity} is assumed to be switched to at function entry and exit.
 
 @findex MODE_PRIORITY_TO_MODE
 @item MODE_PRIORITY_TO_MODE (@var{entity}, @var{n})
