* toplev.c (rest_of_compilation): Set no_new_pseudos after flow1;         instead track register_life_up_to_date.  Toggle no_new_pseudos         around if_convert.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34246 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-29  Richard Henderson  <rth@cygnus.com>
+
+	* toplev.c (rest_of_compilation): Set no_new_pseudos after flow1;
+	instead track register_life_up_to_date.  Toggle no_new_pseudos
+	around if_convert.  
+
 2000-05-28  Geoff Keating  <geoffk@cygnus.com>
 
 	* config/rs6000/rs6000.c (output_cbranch): Escape '%' characters
