--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-29  Richard Henderson  <rth@cygnus.com>
 
+	* combine.c (combine_simplify_rtx): Don't create an if_then_else
+	unless both args are general_operand.  Don't canonicalize plus
+	to ior unless it helps.
+
 	* toplev.c (rest_of_compilation): Set no_new_pseudos after flow1;
 	instead track register_life_up_to_date.  Toggle no_new_pseudos
 	around if_convert.  
