--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-tree.h (CLASSTYPE_ALIGN_UNIT): New macro.
+	* class.c (layout_empty_base): Use CLASSTYPE_ALIGN_UNIT, not
+	CLASSTYPE_ALIGN.
+
 2000-05-28  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* decl2.c (lang_decode_option): Use skip_leading_substring instead
