* jump.c (redirect_jump): Don't emit NOTE_INSN_FUNCTION_END         if nlabel is null.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34256 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-29  Richard Henderson  <rth@cygnus.com>
+
+	* jump.c (redirect_jump): Don't emit NOTE_INSN_FUNCTION_END
+	if nlabel is null.
+
 2000-05-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplib.h (cpp_reader): Remove if_stack.  Change
