* stor-layout.c (finalize_record_size): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-29  Richard Henderson  <rth@cygnus.com>
 
+	* stor-layout.c (finalize_record_size): Fix typo.
+
 	* jump.c (redirect_jump): Don't emit NOTE_INSN_FUNCTION_END
 	if nlabel is null.
 
