* final.c (current_output_insn): New.         (final_scan_insn): Set it.         * output.h: Declare it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34258 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2000-05-29  Richard Henderson  <rth@cygnus.com>
 
+	* final.c (current_output_insn): New.
+	(final_scan_insn): Set it.
+	* output.h: Declare it.
+
+2000-05-29  Richard Henderson  <rth@cygnus.com>
+
 	* stor-layout.c (finalize_record_size): Fix typo.
 
 	* jump.c (redirect_jump): Don't emit NOTE_INSN_FUNCTION_END
