* except.c (free_exception_table): Do not free NULL.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34263 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 30 09:57:32 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* except.c (free_exception_table): Do not free NULL.
+
 2000-05-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplib.c (do_if): Don't save and restore only_seen_white here.
